// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile --  :visit_id POST /profile/:visit_id do visit 1`] = `
Object {
  "body": Object {
    "profileInfo": Object {
      "bio": null,
      "completed": 0,
      "email": "glb@test.test",
      "firstname": "guilhem",
      "gender_id": null,
      "id": 2,
      "lastname": "test",
      "nickname": "gdelabro",
      "orientation_id": 1,
      "password": "abc",
      "score": 100,
      "verified": 0,
    },
  },
  "status": 200,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/block do block 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/block do block 2`] = `
Array [
  RowDataPacket {
    "id": 1,
    "user_id_1": 1,
    "user_id_2": 2,
  },
]
`;

exports[`profile --  :visit_id POST /profile/:visit_id/block do unblock 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/block do unblock 2`] = `Array []`;

exports[`profile --  :visit_id POST /profile/:visit_id/flag do flag (user already flagged) 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/flag do flag (user already flagged) 2`] = `
Array [
  RowDataPacket {
    "flag_count": 2,
    "id": 1,
    "user_id": 2,
  },
]
`;

exports[`profile --  :visit_id POST /profile/:visit_id/flag do flag 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/flag do flag 2`] = `
Array [
  RowDataPacket {
    "flag_count": 1,
    "id": 1,
    "user_id": 2,
  },
]
`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do like 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do like 2`] = `
Array [
  RowDataPacket {
    "id": 1,
    "user_id_1": 1,
    "user_id_2": 2,
  },
]
`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do match 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do match 2`] = `Array []`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do match 3`] = `
Array [
  RowDataPacket {
    "id": 1,
    "user_id_1": 1,
    "user_id_2": 2,
  },
]
`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do not like (already liked) 1`] = `
Object {
  "body": Object {
    "error": "api.profile like user_already_liked",
  },
  "status": 400,
}
`;

exports[`profile --  :visit_id POST /profile/:visit_id/like do not match (already liked) 1`] = `
Object {
  "body": Object {
    "error": "api.profile like user_already_matched",
  },
  "status": 400,
}
`;

exports[`profile --  :visit_id do not visit (user does not exist) 1`] = `
Object {
  "body": Object {
    "err": "api.profile userVisited does_not_exist",
  },
  "status": 400,
}
`;

exports[`profile --  :visit_id do not visit (user has been blocked) 1`] = `
Object {
  "body": Object {
    "err": "api.profile user you_have_been_blocked",
  },
  "status": 400,
}
`;

exports[`profile --  :visit_id do not visit (user has been blocked) 2`] = `
Array [
  RowDataPacket {
    "id": 1,
    "user_id_1": 2,
    "user_id_2": 1,
  },
]
`;

exports[`profile --  :visit_id do not visit (user try to visit himself) 1`] = `
Object {
  "body": Object {
    "error": "illegal action",
  },
  "status": 500,
}
`;

exports[`profile --  GET /profile/logout do logout 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  GET /profile/logout do not logout (jwt.logout throw) 1`] = `
Object {
  "body": Object {
    "error": "api.generateWT token cannot_be_generated",
  },
  "status": 400,
}
`;

exports[`profile --  GET /profile/me do get me 1`] = `
Object {
  "body": Object {
    "profileInfo": Object {
      "bio": null,
      "completed": 0,
      "email": "test@test.test",
      "firstname": "theo",
      "gender_id": null,
      "id": 1,
      "lastname": "test",
      "nickname": "thescriv",
      "orientation_id": 1,
      "password": "abc",
      "score": 100,
      "verified": 0,
    },
  },
  "status": 200,
}
`;

exports[`profile --  GET /profile/me do not get me (user does not exist) 1`] = `
Object {
  "body": Object {
    "error": "api.profile user does_not_exist",
  },
  "status": 400,
}
`;

exports[`profile --  POST /profile/update do not update profile (body is not valid) 1`] = `
Object {
  "body": Object {
    "error": "api.updateProfile password is_not_valid",
  },
  "status": 400,
}
`;

exports[`profile --  POST /profile/update do not update profile (body is not valid) 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "abc",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`profile --  POST /profile/update do update profile (password modified) 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  POST /profile/update do update profile (password modified) 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "abc",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`profile --  POST /profile/update do update profile 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`profile --  POST /profile/update do update profile 2`] = `
Array [
  RowDataPacket {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "abc",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`profile --  auth do not auth (no logged in token) 1`] = `
Object {
  "body": Object {
    "error": "api.generateWT token user_is_not_logged",
  },
  "status": 400,
}
`;

exports[`profile --  auth do not auth (no token) 1`] = `
Object {
  "body": Object {},
  "status": 401,
}
`;

exports[`profile --  auth do not auth (no user_id in token) 1`] = `
Object {
  "body": Object {
    "err": "auth token unknow_token",
  },
  "status": 401,
}
`;

exports[`profile --  auth do not auth (token cannot be verified) 1`] = `
Object {
  "body": Object {
    "error": "api.generateWT token cannot_be_verified",
  },
  "status": 400,
}
`;

exports[`profile --  auth do not auth (user is not logged) 1`] = `
Object {
  "body": Object {
    "error": "api.generateWT token user_is_not_logged",
  },
  "status": 400,
}
`;
